--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,16 +11,18 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
-  google_fonts: ^6.2.1
-  geolocator: ^12.0.0
-  geocoding: ^3.0.0
+  google_fonts: ^7.1.0
+  geolocator: ^14.0.2
+  geocoding: ^4.0.0
   flutter_staggered_animations: ^1.1.1
+  http: ^1.2.1
+  file_picker: ^10.3.8
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.13.1
-  flutter_lints: ^3.0.1
+  flutter_launcher_icons: ^0.14.4
+  flutter_lints: ^6.0.0
 
 flutter:
   uses-material-design: true
