--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,11 @@ dependencies:
   flutter_staggered_animations: ^1.1.1
   http: ^1.2.1
   file_picker: ^10.3.8
+  get: ^4.6.6
+  flutter_animate: ^4.5.0
+  animations: ^2.0.11
+  dio: ^5.5.0+1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
