--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = edochub_b2b
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.edochubB2b
+PRODUCT_BUNDLE_IDENTIFIER = com.edochub.b2b
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2025 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2024 com.example. All rights reserved.
