--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,9 @@ dependencies:
   flutter_animate: ^4.5.0
   animations: ^2.0.11
   dio: ^5.5.0+1
-  intl: ^0.19.0
+  intl: ^0.20.2
+  permission_handler: ^11.3.1
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
