feat: Update dependencies and add gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,30 @@
-.env
+# Miscellaneous
+*.class
+*.log
+*.pyc
+*.swp
+.DS_Store
+.atom/
+.buildlog/
+.history
+.svn/
+
+# IntelliJ
+*.iml
+*.ipr
+*.iws
+.idea/
+
+# Flutter
+.dart_tool/
+.flutter-plugins
+.flutter-plugins-dependencies
+build/
+.pub-cache/
+.pub/
+
+# Android
+/android/local.properties
+/android/.gradle/
+/android/app/build/
+/android/build/
