--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 flutter.sdk=C:\\src\\flutter
 sdk.dir=C:\\Users\\JIT\\AppData\\Local\\Android\\sdk
-flutter.buildMode=release
+flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
